--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Helvetica Neue', Helvetica, Sans-serif;
-    font-weight: 200;
+    font-weight: 400;
+    font-size: 1.5rem;
     margin: 0 auto;
 }
 .header {
@@ -23,56 +24,38 @@ sup {
     cursor: pointer;
 }
 #about-close {
-    -moz-transition:all 1s ease-in-out;
-    -webkit-transition:all 1s ease-in-out;
-    -o-transition:all 1s ease-in-out;
-    -ms-transition:all 1s ease-in-out;
-    transition:all 1s ease-in-out;
-    -moz-animation:blink normal 2s infinite ease-in-out;
-    /* Firefox */
-    -webkit-animation:blink normal 2s infinite ease-in-out;
-    /* Webkit */
-    -ms-animation:blink normal 2s infinite ease-in-out;
-    /* IE */
-    animation:blink normal 2s infinite ease-in-out;
-    /* Opera */
+       -moz-transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
+         -o-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+            transition: all 1s ease-in-out;
+        -moz-animation: blink normal 2s infinite ease-in-out;
+     -webkit-animation: blink normal 2s infinite ease-in-out;
+         -ms-animation: blink normal 2s infinite ease-in-out;
+             animation: blink normal 2s infinite ease-in-out;
 }
 /* about-close fade-in fade-out */
 @keyframes blink {
-    0% {
-           color: rgba(0,0,0,1)
-    }
-    25% {
-           color: rgba(0,0,0,0.5)
-    }
-    50% {
-           color: rgba(0,0,0,0)
-    }
-    75% {
-           color: rgba(0,0,0,0.5)
-    }
-    100% {
-           color: rgba(0,0,0,1)
-    }
+    0%   { color: rgba(0,0,0,1  ) }
+    25%  { color: rgba(0,0,0,0.5) }
+    50%  { color: rgba(0,0,0,0  ) }
+    75%  { color: rgba(0,0,0,0.5) }
+    100% { color: rgba(0,0,0,1  ) }
 }
 @-webkit-keyframes blink {
-    0% {
-           color: rgba(0,0,0,1)
-    }
-    25% {
-           color: rgba(0,0,0,0.5)
-    }
-    50% {
-           color: rgba(0,0,0,0)
-    }
-    75% {
-           color: rgba(0,0,0,0.5)
-    }
-    100% {
-           color: rgba(0,0,0,1)
-    }
+    0%   { color: rgba(0,0,0,1  ) }
+    25%  { color: rgba(0,0,0,0.5) }
+    50%  { color: rgba(0,0,0,0  ) }
+    75%  { color: rgba(0,0,0,0.5) }
+    100% { color: rgba(0,0,0,1  ) }
 }
 
+#fs-form {
+    overflow: auto;
+    line-height: 8px;
+    margin-top: 0px;
+    margin-bottom: 0 !important;
+}
 #fs-form table {
     padding: 0;
     margin: 0;
@@ -84,11 +67,6 @@ sup {
     margin: 0;
     overflow: hidden;
     width: 100%;
-}
-.fs-form {
-    overflow: auto;
-    line-height: 8px;
-    margin-top: 5px;
 }
 .fs-help {
     position: relative;
@@ -111,13 +89,10 @@ sup {
     padding-right: 0px;
 }
 input[type="text"] {
-    /*! height: 20px; */
     width: 95%;
     height: 36px !important;
-    /*! border: 1px solid; */
     border: none !important;
     margin-bottom: 0 !important;
-    /*! margin-bottom: 0 !important; */
     padding-left: 5px;
     
 }
@@ -145,10 +120,11 @@ input[type="checkbox"] {
 }
 .cacheCheckMsg {
     text-align: left;
-    font-size: 10px;
     line-height: 16px;
     margin-top: 0;
-    margin-bottom: 5px;
+    color: red;
+    font-size: 0.8em;
+    margin-bottom: 10px;
 }
 .off-none {
     visibility: hidden;
@@ -161,11 +137,8 @@ input[type="checkbox"] {
 .on {
     visibility: visible;
 }
-#about {
-    font-size: 11px;
-}
 #about-text {
-    margin-top: 10px;
+    margin-top: 12px;
 }
 h3 {
     font-size: 14px;
@@ -215,7 +188,6 @@ h3 {
     padding: 0px;
     border: 1px solid silver;
     margin-left: 0em;
-/*     margin:  0 0 0; */
 }
 
 .masonry figure {
@@ -431,17 +403,9 @@ footer img {
 /* end flickity */
 
 @media (min-width: 375px) {
-    .msg {
-        font-size: 9px;
-    }
+
 }
 @media (min-width: 414px) {
-    .msg {
-        font-size: 10px;
-    }
-    #about {
-        font-size: 12px;
-    }
     .masonry {
         -moz-column-count: 2;
         -webkit-column-count: 2;
@@ -458,17 +422,14 @@ footer img {
         margin-top: 10px;
     }
     #about {
-        font-size: 14px;
-        width: 500px;
         margin: 0 auto;
         margin-top: 50px;
     }
+    .fs-form {
+        margin-bottom: 2em !important;
+    }
     .cacheCheckMsg {
-        text-align: left;
-        font-size: 10px;
-        line-height: 0px;
-        margin-top: 0;
-        margin-bottom: 0px;
+        font-size: 1em;
     }
     h3 {
         font-size: 16px;
